// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceDependenciesLegend Tests should render ServiceDependenciesLegend component with correct labels 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-primary1"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--padding-left-medium StyledProps--padding-right-medium"
      style="height: 30px;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.unhealthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.needsAttention
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.observe
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.healthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          na
        </p>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main serviceTypesContainer StyledProps--padding-left-medium StyledProps--padding-right-medium StyledProps--flex StyledProps--flex-justifyContent-flex-start"
      style="height: 30px;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--margin-right-xsmall"
          data-icon="dependency-default-icon"
        >
          <svg
            height="10"
            viewBox="0 0 16 16"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0.801914 0.350373L0.801922 0.35054C0.815976 0.34988 0.830052 0.349825 0.844109 0.350375H6.97728H6.97729C7.10748 0.350388 7.23233 0.402108 7.32439 0.494161C7.41644 0.586213 7.46817 0.711056 7.46818 0.841245V0.841263V6.97748V6.97749C7.46818 7.10768 7.41645 7.23253 7.32439 7.32459C7.23234 7.41665 7.10749 7.46838 6.97729 7.46839H6.97728H0.840912H0.840897C0.710702 7.46838 0.585849 7.41665 0.493794 7.32459M0.801914 0.350373L0.599437 7.21895L0.493794 7.32459C0.493794 7.32459 0.493794 7.32459 0.493794 7.32459M0.801914 0.350373L0.794878 0.351036L0.801914 0.350373ZM0.493794 7.32459C0.401737 7.23253 0.350013 7.10768 0.350003 6.97749M0.493794 7.32459L0.350003 6.97749M0.350003 6.97749L0.350003 6.97748V0.841553V0.841263H0.500003L0.350003 6.97749ZM8.98374 0.35054L8.98373 0.350373L8.68182 0.841263H8.53182V0.841671C8.53182 0.841749 8.53182 0.841828 8.53182 0.841907L8.53182 6.97748C8.53183 7.10768 8.58356 7.23253 8.67561 7.32459C8.76767 7.41665 8.89252 7.46838 9.02272 7.46839H9.02273H15.1591H15.1591C15.2893 7.46838 15.4142 7.41665 15.5062 7.32459C15.5983 7.23253 15.65 7.10768 15.65 6.97749V0.841263V0.841244C15.65 0.711057 15.5983 0.586213 15.5062 0.494161L15.5062 0.49416C15.4141 0.402108 15.2893 0.350388 15.1591 0.350375H15.1591H9.02593C9.01187 0.349825 8.99779 0.34988 8.98374 0.35054ZM0.80192 8.53212L0.801912 8.53195L0.500003 9.02285H0.350003V9.02314V15.1591L0.350003 15.1591C0.350013 15.2893 0.401741 15.4141 0.493794 15.5062C0.58584 15.5982 0.71069 15.65 0.840898 15.65H6.97728C7.1075 15.65 7.23235 15.5982 7.32439 15.5062C7.41645 15.4141 7.46818 15.2893 7.46818 15.1591V9.02285V9.02283C7.46817 8.89265 7.41645 8.76779 7.32439 8.67574C7.23233 8.58369 7.10748 8.53197 6.97729 8.53195H6.97728H0.844111C0.830052 8.5314 0.815975 8.53146 0.80192 8.53212ZM1.33182 1.33217H6.48637V6.48658H1.33182V1.33217ZM9.51364 1.33217H14.6682V6.48658H9.51364V1.33217ZM12.0909 8.52667C10.129 8.52667 8.53182 10.1298 8.53182 12.091C8.53182 14.0526 10.1293 15.65 12.0909 15.65C14.0525 15.65 15.65 14.0526 15.65 12.091C15.65 10.1298 14.0528 8.52667 12.0909 8.52667ZM1.33182 9.51376H6.48637V14.6682H1.33182V9.51376ZM12.0909 9.51376C13.5183 9.51376 14.6682 10.6636 14.6682 12.091C14.6682 13.518 13.5187 14.6629 12.0909 14.6629C10.6631 14.6629 9.51364 13.518 9.51364 12.091C9.51364 10.6636 10.6635 9.51376 12.0909 9.51376Z"
              fill="currentColor"
              stroke="currentColor"
              stroke-width="0.3"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.changeSource.HarnessCDCurrentGen.applicationId
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--margin-right-xsmall"
          data-icon="infrastructure"
        >
          <svg
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.543 5.377 8 2.755 3.458 5.377v5.246L8 13.245l4.543-2.622V5.377ZM8.5 1.89a1 1 0 0 0-1 0L2.958 4.51a1 1 0 0 0-.5.866v5.246a1 1 0 0 0 .5.866L7.5 14.11a1 1 0 0 0 1 0l4.543-2.622a1 1 0 0 0 .5-.866V5.377a1 1 0 0 0-.5-.866L8.5 1.89Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M10.233 6.71 8 5.422l-2.233 1.29v2.578L8 10.58l2.233-1.29V6.711ZM8.5 4.556a1 1 0 0 0-1 0l-2.233 1.29a1 1 0 0 0-.5.866v2.578a1 1 0 0 0 .5.866l2.233 1.29a1 1 0 0 0 1 0l2.233-1.29a1 1 0 0 0 .5-.866V6.711a1 1 0 0 0-.5-.866L8.5 4.555Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          infrastructureText
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ServiceDependenciesLegend Tests should render ServiceDependenciesLegend without ServiceType legend 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-primary1"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--padding-left-medium StyledProps--padding-right-medium"
      style="height: 30px;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.unhealthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.needsAttention
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.observe
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.healthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          na
        </p>
      </div>
    </div>
  </div>
</div>
`;
